[package]
name = "toy-arms"
version = "0.5.1"
edition = "2018"
authors = ["s3pt3mb3r <s3pt3mb3r@protonmail.com>"]
description = "A crates designed to ease game hack in rust."
license = "MIT"
keywords = ["gamehack", "cheat", "windows", "memory"]
repository = "https://github.com/s3pt3mb3r/toy-arms"
readme = "README.md"

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "minwindef", "libloaderapi", "memoryapi", "consoleapi", "winnt", "tlhelp32", "handleapi", "processthreadsapi", "impl-default", "errhandlingapi"] }
toy-arms_derive = {path = "./toy-arms_derive", version = "0.1.1"}
thiserror = "1.0.29"

[features]
default = ["internal"]
internal = []
external = []

[[example]]
name = "get_localplayer_health"
crate-type = ["cdylib"]

[[example]]
name = "simplest_dll"
crate-type = ["cdylib"]

[[example]]
name = "basic"
crate-type = ["cdylib"]
