[package]
name = "internal"
version = "0.9.5"
edition = "2021"

[dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "libloaderapi", "consoleapi", "winnt",
     "processthreadsapi", "impl-default", "psapi"] }
toy-arms_derive = {path = "../toy-arms_derive"}
utils = {package = "toy-arms_utils", path = "../toy-arms_utils"}
smartstring = "0.2.9"
regex = "1.5.5"