[package]
name = "toy-arms-test"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "consoleapi", "ntdef", "minwinbase", "fileapi", "windef"] }
toy-arms = {path = "../toy-arms"}
static_init = "1.0.1"
minhook-sys = "0.1.1"
detour = {version = "0.8.1", features = ["default"]}