[package]
name = "toy-arms"
version = "0.1.0"
edition = "2018"
authors = ["s3pt3mb3r <s3pt3mb3r@protonmail.com>"]
description = "A crates designed to ease game hack in rust."
license = "PolyForm-Noncommercial"
license-file = "LICENSE"
keywords = ["gamehack", "cheat", "windows"]
repository = "https://github.com/s3pt3mb3r/toy-arms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = {version = "0.1.0", path = "bindings"}
windows = "0.19.0"