[package]
name = "toy-arms_derive"
version = "0.1.0"
edition = "2018"
authors = ["s3pt3mb3r <s3pt3mb3r@protonmail.com>"]
description = "A derive macro crate for toy-arms"
license = "MIT"
keywords = ["gamehack", "cheat", "windows", "memory"]
repository = "https://github.com/s3pt3mb3r/toy-arms/tree/master/toy-arms_derive"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.78"
quote = "1.0.10"