[package]
name = "toy-arms-bindings"
version = "0.1.0"
edition = "2018"
authors = ["s3pt3mb3r <s3pt3mb3r@protonmail.com>"]
description = "A bindings to win32metadata used by toy-arms."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.19.0"

[build-dependencies]
windows = "0.19.0"